# HardwareMon

./: .gitignore  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  backend.spec  codemagic.yaml  hardwaremon-public.asc  index.html  nfpm.yaml  nfpm.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_hardwaremon.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: generate-release-metadata.py  generate-release-sbom.py  macos-sign-app.sh  macos-validate-app.sh  macos-validate-dmg.sh
.github/workflows/: android-release.yml  build-linux-flutter.yml  codeql.yml  dependency-review.yml  flatpak.yml  flutteranalyze.yml  gitguardian.yml  lint.yml  macos_release.yml  nfpm.yml  (+5 more)
Windows/: HardwareMon.spec  build.bat  hardwaremon_win.py
android/: .gitignore  README.md  build.gradle.kts  hardwaremon-release.jks  settings.gradle.kts
apt/: hardwaremon.deb
docs/: CARD_WORKSPACES.md  GAMING_OVERLAY.md  PLUGIN_SYSTEM.md  VNEXT_COMPANION_FEATURES.md  benchmark-cloud-api.md  release-verification.md
flatpak/: com.hardwaremon.HardwareMon.yml
flutter_gui/: .gitignore  README.md  pubspec.yaml
hardwaremon/: api.py  api.spec  database.py  hardwaremon.db  hardwaremon.py  hardwaremon_gui.py  hash_utils.py  process_scanner.py  requirements.txt  virustotal.py
hardwaremon-release/: database.py
hardwaremon_app/: .gitignore  README.md  pubspec.yaml
installer/: build_installer.ps1  installer.iss
public/: 404.html  _headers  _redirects  index.html
yum/: hardwaremon.rpm
(+306 files in other folders)
